// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TouchableRipple component Should render touchable ripple correctly 1`] = `
<TouchableWithoutFeedback
  delayPressOut={100}
  disabled={false}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  testID="touchable-ripple"
>
  <View>
    <Text>
      I have a ripple!
    </Text>
    <View
      hideOverflow={false}
      style={
        Array [
          Object {
            "bottom": 0,
            "elevation": 999,
            "left": 0,
            "overflow": "visible",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 999,
          },
        ]
      }
    >
      <View
        color="primary"
        size={48}
        style={
          Object {
            "backgroundColor": "#f4ab34",
            "borderRadius": 24,
            "height": 48,
            "left": "50%",
            "opacity": 0,
            "position": "absolute",
            "top": "50%",
            "transform": Array [
              Object {
                "translateX": -24,
              },
              Object {
                "translateY": -24,
              },
              Object {
                "scale": 0,
              },
            ],
            "width": 48,
          }
        }
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`TouchableRipple component Should render touchable ripple with color 1`] = `
<TouchableWithoutFeedback
  delayPressOut={100}
  disabled={false}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  testID="touchable-ripple"
>
  <View>
    <Text>
      I have a ripple!
    </Text>
    <View
      hideOverflow={false}
      style={
        Array [
          Object {
            "bottom": 0,
            "elevation": 999,
            "left": 0,
            "overflow": "visible",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 999,
          },
        ]
      }
    >
      <View
        color="secondary"
        size={48}
        style={
          Object {
            "backgroundColor": "#ff6b0b",
            "borderRadius": 24,
            "height": 48,
            "left": "50%",
            "opacity": 0,
            "position": "absolute",
            "top": "50%",
            "transform": Array [
              Object {
                "translateX": -24,
              },
              Object {
                "translateY": -24,
              },
              Object {
                "scale": 0,
              },
            ],
            "width": 48,
          }
        }
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`TouchableRipple component Should render touchable ripple with disabled 1`] = `
<TouchableWithoutFeedback
  delayPressOut={100}
  disabled={true}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  testID="touchable-ripple"
>
  <View>
    <Text>
      I have a ripple!
    </Text>
    <View
      hideOverflow={false}
      style={
        Array [
          Object {
            "bottom": 0,
            "elevation": 999,
            "left": 0,
            "overflow": "visible",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 999,
          },
        ]
      }
    >
      <View
        color="primary"
        size={48}
        style={
          Object {
            "backgroundColor": "#f4ab34",
            "borderRadius": 24,
            "height": 48,
            "left": "50%",
            "opacity": 0,
            "position": "absolute",
            "top": "50%",
            "transform": Array [
              Object {
                "translateX": -24,
              },
              Object {
                "translateY": -24,
              },
              Object {
                "scale": 0,
              },
            ],
            "width": 48,
          }
        }
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`TouchableRipple component Should render touchable ripple with hideOverflow 1`] = `
<TouchableWithoutFeedback
  delayPressOut={100}
  disabled={false}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  testID="touchable-ripple"
>
  <View>
    <Text>
      I have a ripple!
    </Text>
    <View
      hideOverflow={true}
      style={
        Array [
          Object {
            "bottom": 0,
            "elevation": 999,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 999,
          },
        ]
      }
    >
      <View
        color="primary"
        size={48}
        style={
          Object {
            "backgroundColor": "#f4ab34",
            "borderRadius": 24,
            "height": 48,
            "left": "50%",
            "opacity": 0,
            "position": "absolute",
            "top": "50%",
            "transform": Array [
              Object {
                "translateX": -24,
              },
              Object {
                "translateY": -24,
              },
              Object {
                "scale": 0,
              },
            ],
            "width": 48,
          }
        }
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;
